Test/7-22_cluster.clu
Cluster size 7
Cluster number 220107       # E:      Factor:7  P:  , Ori size:7    Sub:7    From:22          
   7    22    fam_7_1           1-98       1   leng: 97
   7    22    fam_7_2           1-98       1   leng: 97
   7    22    fam_7_3           1-98       1   leng: 97
   7    22    fam_7_4           1-98       1   leng: 97
   7    22    fam_7_5           1-98       1   leng: 97
   7    22    fam_7_6           1-98       1   leng: 97
   7    22    fam_7_7           1-97       1   leng: 96
